--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇰🇷 韩国-701.9KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-968.9KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-413.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.04MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.68MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇯🇵 日本-306.5KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-3.10MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.32MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-352.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-424.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.72MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
