--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-701.9KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-968.9KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-306.5KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-858.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.01MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇨🇦 加拿大-3.10MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.32MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
   - {name: 🇨🇳 中国-352.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-968.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
