--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-858.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.01MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇦 加拿大-3.10MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.32MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-746.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-216.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-969.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-352.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-424.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.72MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,20 +53,19 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -74,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-858.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-746.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-216.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
